--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ header>h1 {
 nav {
     display: flex;
     justify-content: space-around;
-    padding-bottom: 0.67em;
 }
 
 .school__category {
@@ -42,17 +41,16 @@ input[type="radio"].shri-category {
     display: none;
 }
 
-input[type="radio"].shri-category:checked+div#app~[data-school="shri"] {
-    border-bottom: 1px solid red;
-}
-
 input[type="radio"].shri-category+label {
     cursor: pointer;
-    border-bottom: 1px solid transparent;
+    border-bottom: 3px solid transparent;
+    display: flex;
+    flex: 1;
+    justify-content: center;
 }
 
 input[type="radio"].shri-category:checked+label {
-    border-bottom: 1px solid red
+    border-bottom: 3px solid red
 }
 
 div#app {
@@ -356,12 +354,10 @@ article.lecture {
         position: fixed;
         z-index: 10;
     }
-
     .modal:target {
         z-index: 10;
     }
 }
-
 
 @media screen and (min-height: 700px) {
     .modal__wrapper {
@@ -369,8 +365,6 @@ article.lecture {
         max-height: 550px;
     }
 }
-
-
 
 
 /*Новый стиль кнопки*/
