--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,7 @@ article.lecture {
     }
 }
 
-@media (orientation:landscape) and (max-height: 700px) {
+@media (orientation:landscape) and (max-height: 750px) {
     .modal__wrapper {
         max-height: initial;
         max-width: initial;
@@ -331,10 +331,34 @@ article.lecture {
         height: auto;
         top: 35%;
         left: 750px;
-        transform: translate(5%, -40%);
+        transform: translate(5%);
         max-height: 550px;
         position: fixed;
         z-index: 10;
+    }
+}
+
+@media (min-width: 1250px) and (max-height:750px) {
+    .modal {
+        visibility: hidden;
+    }
+    .modal:target {
+        background: none;
+        max-height: initial;
+        max-width: initial;
+        z-index: 10;
+    }
+    .modal__wrapper {
+        visibility: initial;
+        height: auto;
+         top: 135px; 
+        /* left: 750px; */
+        /* transform: translate(5%, -40%); */
+        max-height: 550px;
+        position: fixed;
+        z-index: 10;
+        height: 90%;
+        max-width: 450px;
     }
 }
 
@@ -348,9 +372,9 @@ article.lecture {
     .modal__wrapper {
         visibility: initial;
         height: auto;
-        top: 35%;
+        top: 135px;
         left: 750px;
-        transform: translate(5%, -40%);
+        /*transform: translateY(5%);*/
         max-height: 550px;
         position: fixed;
         z-index: 10;
