--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,9 @@ article.lecture {
         position: fixed;
         z-index: 10;
     }
+    .lecture__content .name {
+        font-size: 18px;
+    }
 }
 
 @media (min-width: 1250px) and (max-height:750px) {
@@ -351,7 +354,7 @@ article.lecture {
     .modal__wrapper {
         visibility: initial;
         height: auto;
-        top: 135px; 
+        top: 135px;
         max-height: 400px;
         position: fixed;
         z-index: 10;
