--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ header>h1 {
     padding: 0.67em 0;
 }
 
+header>h1:first-letter {
+    color: red;
+}
+
 nav {
     display: flex;
     justify-content: space-around;
