--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,7 @@ article.lecture {
     left: 50%;
     position: relative;
     box-shadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.40);
+    padding: 10px 0px;
 }
 
 
@@ -315,7 +316,7 @@ article.lecture {
     }
 }
 
-@media (orientation:landscape) and (max-height: 660px) {
+@media (max-height: 660px) and (max-width: 800px) {
     .modal__wrapper {
         max-height: initial;
         max-width: initial;
@@ -389,8 +390,17 @@ article.lecture {
     }
 }
 
-@media screen and (min-height: 670px) {
+@media screen and (min-height: 750px) {
     .modal__wrapper {
+        height: auto;
+        max-height: 550px;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .modal__wrapper {
+        width: auto;
+        max-width: 450px;
         height: auto;
         max-height: 550px;
     }
