--- a/css/style.css
+++ b/css/style.css
@@ -247,11 +247,11 @@ article.lecture {
     color: red;
     position: absolute;
     right: 0;
-    padding: 10px 20px;
+    padding: 5px 20px;
 }
 
 .modal__wrapper-speaker {
-    margin-bottom: 10px;
+    margin: 15px 10px;
 }
 
 .modal__wrapper-name {
